sourceforge (2.6-0+5+) unstable; urgency=low

  * [Roland] [From 2.5] Added docs.

 -- Roland Mas <lolando@debian.org>  Mon, 28 Jan 2002 11:37:57 +0100

sourceforge (2.6-0+5) unstable; urgency=low

  * [Christian] Added dependency to php4-mcrypt
  * [Christian] Temporary workaround for libmcrypt bug in local.inc.template
  * [Christian] Removed mcrypt-test.sh 

 -- Christian Bayle <bayle@aist.enst.fr>  Sun, 27 Jan 2002 18:43:43 +0100

sourceforge (2.6-0+4) unstable; urgency=low

  * [Christian] Removed unjustified warning in intall-ldap.sh.
  * [Roland] Updated Standards-Version to 3.5.6.0.
  * [Roland] Made the package arch-independent.
  * [Roland] Updated debian/TODO a bit.
  * [Roland] Fixed a few minor bugs in my/index.php.
  * [Roland] Fixed speling error in Description: field.
  * [Roland] Added dependencies on packages providing the vi editor.
  * [Roland] www/include/Layout.class (and others): Removed the VA logo in
    the site icon.  The new site icon now consists of a black "SF" written
    over a Debian swirl.
  * [Roland] deb-specific/install-ldap.sh: Test for the existence of
    /etc/ldap/slapd.conf before trying to modify it, and suggest to
    reconfigure slapd if it is not present.
  * [Roland] [From 2.5] Ported the new LDAP schema, that had been
    forgotten for some reason.
  * [Roland] [From 2.5] Fixed email addresses on the users' home page.
  * [Roland] Added the login name and real name of the user whose
    permissions in a project are being edited.
  * [Roland] Replaced a call to /etc/init.d/bind9 restart by a (more
    appropriate) reload.  Used the policy-defined invoke-rc.d, too.
  * [Roland] Fixed dependencies to correctly handle apache-ssl and
    exim-tls.

 -- Roland Mas <lolando@debian.org>  Fri, 11 Jan 2002 13:05:02 +0100

sourceforge (2.6-0+3) unstable; urgency=low

  * [Christian] Added proper chmod for cp -r www and common
  * [Christian] Added homedir_prefix and groupdir_prefix in