@@ -7,7 +7,7 @@ Standards-Version: 3.5.6.0
 
 Package: sourceforge
 Architecture: all
-Depends: apache (>= 1.3.9) | apache-ssl (>= 1.3.9), libapache-mod-ssl | apache-ssl, php4, php4-pgsql, php4-gd, php4-cgi, php4-ldap, php4-mcrypt, postgresql (>= 7.1.2), perl, perl-suid, libdbi-perl, libdbd-pg-perl, debianutils (>= 1.7), debconf (>= 0.5.00), ssh, libnss-ldap, bind9, slapd, ldap-utils, exim | exim-tls, libpam-ldap, cvs, mailman, proftpd, elvis | nvi | vim
+Depends: apache (>= 1.3.9) | apache-ssl (>= 1.3.9), libapache-mod-ssl | apache-ssl, php4, php4-pgsql, php4-gd, php4-cgi, php4-ldap, php4-mcrypt, postgresql (>= 7.1.2), perl, perl-suid, libdbi-perl, libdbd-pg-perl, libmime-base64-perl, libhtml-parser-perl, debianutils (>= 1.7), debconf (>= 0.5.00), ssh, libnss-ldap, bind9, slapd, ldap-utils, exim | exim-tls, libpam-ldap, cvs, mailman, proftpd, elvis | nvi | vim
 Description: Integrated development project framework
  This package provides many services a development project can use,
  such as bug-tracking, task management, mailing-lists, CVS repository,
